# lsp-client

./: CMakeLists.txt  LICENCE.txt  README.md  lsp.cpp
include/: clangversion.h  clientnotifications.h  connection.h  lsptypes.h  randomutil.h  requests.h  servernotifications.h
include/lsp/: clientnotifications.h  connection.h  lspclient.h  lsptypes.h  notifications.h  requestqueue.h  requests.h  servernotifications.h  subscriptions.h
lib/: CMakeLists.txt
src/: clangversion.cpp  connection.cpp  connection.h  lspclient.cpp  lsptypes.h  main.cpp  notifications.h  requestqueue.h  requests.h  subscriptions.h
tests/: CMakeLists.txt  test1.cpp
tests/testsrc/: .clangd  test1.cpp
